--- a/wp-content/plugins/nsr-vc-extended/source/sass/nsr-vc-extended.scss
+++ b/wp-content/plugins/nsr-vc-extended/source/sass/nsr-vc-extended.scss
@@ -412,7 +412,8 @@ input[type=text]:focus.invalid {
       color:$mossGreen;
     }
     .isize {
-      font-size:0.8rem;
+      font-size:1.2rem;
+      margin-top:1px;
     }
 
   }
