--- a/wp-content/plugins/nsr-vc-extended/source/sass/nsr-vc-extended.scss
+++ b/wp-content/plugins/nsr-vc-extended/source/sass/nsr-vc-extended.scss
@@ -415,6 +415,9 @@ input[type=text]:focus.invalid {
       font-size:1.2rem;
       margin-top:1px;
     }
+    .locationmap {
+      cursor:pointer;
+    }
 
   }
 
