--- a/wp-content/plugins/nsr-vc-extended/source/sass/nsr-vc-extended.scss
+++ b/wp-content/plugins/nsr-vc-extended/source/sass/nsr-vc-extended.scss
@@ -495,6 +495,10 @@ input[type=text]:focus.invalid {
     .tabMobile {
       display:block;
 
+      li {
+
+      }
+
       th {
         min-width:92px;
         background-color:$darkerGreen;
@@ -503,6 +507,7 @@ input[type=text]:focus.invalid {
         width:100%;
         background-color:lighten($darkerGreen, 3%);
       }
+
       &tr:nth-child(even),  &tr:nth-child(odd)  {
         background-color:lighten($darkerGreen, 3%);
         color:$lightGreen !important;
@@ -514,10 +519,10 @@ input[type=text]:focus.invalid {
         background-color:#005f6e !important;
       }
 
-
       tr:last-child{
         display:none;
       }
+
     }
 
   }
