--- a/wp-content/plugins/nsr-vc-extended/source/sass/nsr-vc-extended.scss
+++ b/wp-content/plugins/nsr-vc-extended/source/sass/nsr-vc-extended.scss
@@ -627,15 +627,13 @@ input[type=text]:focus.invalid {
   }
 
 
+  .relative {
+    position:relative;
+  }
+  .preloader-wrapper {
+    width:18px !important;
+    height:18px !important;
+    margin-right:8px;
+
+  }
 }
-
-
-
-
-
-
-
-
-
-
-
