--- a/wp-content/plugins/nsr-vc-extended/source/sass/nsr-vc-extended.scss
+++ b/wp-content/plugins/nsr-vc-extended/source/sass/nsr-vc-extended.scss
@@ -634,6 +634,6 @@ input[type=text]:focus.invalid {
     width:18px !important;
     height:18px !important;
     margin-right:8px;
-
+    float:right;
   }
 }
