--- a/wp-content/plugins/nsr-vc-extended/source/sass/nsr-vc-extended.scss
+++ b/wp-content/plugins/nsr-vc-extended/source/sass/nsr-vc-extended.scss
@@ -295,10 +295,8 @@ input[type=text]:focus.invalid {
   &.fullscreen{
     z-index:9999;
     background-color: rgba(0, 0, 0, 0.5);
-    position: fixed;
-    top: 60px;
-    left: 0px;
-    bottom:0px;
+    position: absolute;
+
     width:100%;
     margin: 0;
     padding:15px;
@@ -310,7 +308,14 @@ input[type=text]:focus.invalid {
     transform: translateY(-2%);
     margin-left: 0rem !important;
     margin-right: 0rem !important;
-
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: 0;
+    box-sizing: border-box;
+    display: table;
+    transition:300ms ease;
 
   }
 
