404 and a few more fixes..

--- a/wp-content/themes/municipio-nsr/assets/source/sass/master.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/master.scss
@@ -21,4 +21,10 @@ html.video-is-playing {
 html.translated-ltr #site-header {
     top: 39px;
 }
+.error404.theme-green {
+    background-color: #fff !important;
+}
+.error404 .sticky {
+    margin-left: -30px;
+}
 
