--- a/wp-content/themes/municipio-nsr/assets/source/sass/master.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/master.scss
@@ -21,6 +21,9 @@ html.video-is-playing {
 html.translated-ltr #site-header {
     top: 39px;
 }
+.error404 {
+    color:#000;
+}
 .error404.theme-green {
     background-color: #fff !important;
 }
