exInfo display width

--- a/wp-content/plugins/nsr-vc-extended/source/sass/nsr-vc-extended.scss
+++ b/wp-content/plugins/nsr-vc-extended/source/sass/nsr-vc-extended.scss
@@ -549,6 +549,10 @@ input[type=text]:focus.invalid {
     background:none !important;
   }
 
+  .exnfodispl {
+    max-width: 200px;
+  }
+
   @media (max-width: 700px) {
     .exnfodispl {
       display:none;
