--- a/wp-content/themes/municipio-nsr/assets/source/sass/master.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/master.scss
@@ -30,5 +30,10 @@ html.translated-ltr #site-header {
 .error404 .sticky {
     margin-left: -30px;
 }
+#login h1 a, .login h1 a {
+    height:30px;
+    background-image: url('../img/logo-avc-admin.png');
+    padding-bottom: 30px;
+}
 
 
