--- a/wp-content/themes/municipio-nsr/assets/source/sass/master.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/master.scss
@@ -43,6 +43,9 @@ html.translated-ltr #site-header {
     text-decoration: none;
     text-shadow: 0 -1px 1px #007586, 1px 0 1px #007586, 0 1px 1px #007586, -1px 0 1px #007586;
 }
+#password_protected_pass {
+    background-color:#f6f6f6!important;
+}
 
 
 
