--- a/wp-content/themes/municipio-nsr/assets/source/sass/config/_colors.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/config/_colors.scss
@@ -9,6 +9,7 @@ $palette-primary-white-opacity: rgba(255,255,255,0.9);
 
 /* Greys */
 $palette-primary-grey: #f6f6f6;
+$palette-primary-grey-input:#e6e6e6;
 
 /* Black */
 $palette-primary-black: #000;
