form input, textarea colors

--- a/wp-content/themes/municipio-nsr/assets/source/sass/master.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/master.scss
@@ -44,7 +44,7 @@ html.translated-ltr #site-header {
     text-shadow: 0 -1px 1px #007586, 1px 0 1px #007586, 0 1px 1px #007586, -1px 0 1px #007586;
 }
 #password_protected_pass {
-    background-color:#f6f6f6!important;
+    background-color:#e6e6e6 !important;
 }
 
 
