--- a/wp-content/themes/municipio-nsr/assets/source/sass/layout/_content.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/layout/_content.scss
@@ -134,7 +134,9 @@
         background-color: transparent !important;
     }
 
-
+    .searchResult {
+        min-height:530px;
+    }
 
     // ***********************************************************************************
     // *** Wake up gfx card to rerender fonts
