geolink colors - nearest location

--- a/wp-content/plugins/nsr-vc-extended/source/sass/nsr-vc-extended.scss
+++ b/wp-content/plugins/nsr-vc-extended/source/sass/nsr-vc-extended.scss
@@ -435,6 +435,14 @@ input[type=text]:focus.invalid {
 
   }
 
+  .geoLink {
+    color:#fff;
+    text-decoration:underline;
+    font-weight:600;
+  }
+  .geoLink:before {
+    color:#fff;
+  }
 
   .nofraktionlink.span > li {
     border:1px solid red;
