geolink - force icon to change color

--- a/wp-content/plugins/nsr-vc-extended/source/sass/nsr-vc-extended.scss
+++ b/wp-content/plugins/nsr-vc-extended/source/sass/nsr-vc-extended.scss
@@ -441,7 +441,7 @@ input[type=text]:focus.invalid {
     font-weight:600;
   }
   .geoLink:before {
-    color:#fff;
+    color:#fff !important;
   }
 
   .nofraktionlink.span > li {
