--- a/wp-content/themes/municipio-nsr/assets/source/sass/layout/_typography.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/layout/_typography.scss
@@ -65,7 +65,7 @@ h6 {
     text-transform: uppercase;
 }
 
-h5.page-excertpt {
+h5.page-excertpt, .ingress {
     font-size: 1.4666rem;
     font-weight:normal;
     color: alpha-color($palette-primary-grey, 70%, $type:'dark');
@@ -73,6 +73,7 @@ h5.page-excertpt {
     margin-bottom:27px;
     margin-top:8px;
 }
+
 
 p {
     font-size: 102%;
