--- a/wp-content/plugins/nsr-vc-extended/source/sass/nsr-vc-extended.scss
+++ b/wp-content/plugins/nsr-vc-extended/source/sass/nsr-vc-extended.scss
@@ -7,6 +7,7 @@ $defaultGreen: #007586;
 $defaultDarkGreen: darken($defaultGreen, 5%);
 $signalGreen : #2dbccd;
 $signalGreenNeo : #8ef3ff;
+$lightblue = #b2f8ff;
 //$lightGreen : #aaeaf2; // Snyggare men...
 $lightGreen : $white;
 $mossGreen : #039db0;
@@ -210,7 +211,7 @@ input[type=text]:focus.invalid {
 
   .input-field input[type=search] {
     background-color: rgba(255, 255, 255, 0.1);
-    color: lighten($defaultDarkGreen, 8%);
+    color: $lightblue;
     margin-top: 10px;
     padding-left: 4.5rem;
   }
