--- a/wp-content/plugins/nsr-vc-extended/source/sass/nsr-vc-extended.scss
+++ b/wp-content/plugins/nsr-vc-extended/source/sass/nsr-vc-extended.scss
@@ -12,7 +12,7 @@ $lightGreen : $white;
 $mossGreen : #039db0;
 $darkGreen : #007684;
 $darkerGreen: #016a77;
-$lightBlue = #b2f8ff;
+$lightBlue = #90f3ff;
 
 
 .mce-content-body ul,
