--- a/wp-content/plugins/nsr-vc-extended/source/sass/nsr-vc-extended.scss
+++ b/wp-content/plugins/nsr-vc-extended/source/sass/nsr-vc-extended.scss
@@ -393,7 +393,7 @@ input[type=text]:focus.invalid {
       text-decoration: none !important;
       color:$lightGreen !important;
       &:hover {
-        color:$white !important;
+        color:$lightCyan !important;
       }
 
     }
