--- a/wp-content/plugins/nsr-vc-extended/source/sass/nsr-vc-extended.scss
+++ b/wp-content/plugins/nsr-vc-extended/source/sass/nsr-vc-extended.scss
@@ -430,7 +430,10 @@ input[type=text]:focus.invalid {
       margin-top:1px;
     }
     .locationmap {
-      cursor:pointer;
+      cursor: pointer;
+      &:hover {
+        color: $lightCyan !important;
+      }
     }
 
   }
