--- a/wp-content/plugins/nsr-vc-extended/source/sass/nsr-vc-extended.scss
+++ b/wp-content/plugins/nsr-vc-extended/source/sass/nsr-vc-extended.scss
@@ -326,6 +326,7 @@ input[type=text]:focus.invalid {
 
   &.position-relative.fullscreen {
     top:20px;
+    margin-bottom: 40px;
   }
 
   .section {
