2 sets of page colors to select in admin, meta box, logic etc

--- a/wp-content/themes/municipio-nsr/assets/source/sass/layout/_content.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/layout/_content.scss
@@ -140,3 +140,14 @@
 
 
 }
+
+&.nsr-background-white main {
+    background-color:$palette-primary-white !important;
+}
+
+&.nsr-background-grey main {
+    background-color:$palette-primary-grey !important;
+}
+&.nsr-background-grey .page-footer {
+    display:none;
+}
