--- a/wp-content/themes/municipio-nsr/assets/source/sass/layout/_typography.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/layout/_typography.scss
@@ -46,7 +46,7 @@ h1 {
     font-size: 3.75rem;
     letter-spacing:1.6px;
     color: alpha-color($palette-primary-grey, 74%, $type:'dark') !important;
-    min-height:80px;
+    /*min-height:80px;*/
     max-width:990px !important;
     line-height:93%;
     padding:0px;
