translate3d text rendering vs pos fixed

--- a/wp-content/themes/municipio-nsr/assets/source/sass/app.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/app.scss
@@ -75,6 +75,8 @@
         @include importGoogleFonts();
 
 
+        
+        @import 'layout/outsidescope';
 
     }
 
@@ -84,6 +86,9 @@
         // ***************************************************************
         @import 'layout/_home';
     }
+
+
+
 
 
 
