--- a/wp-content/themes/municipio-nsr/assets/source/sass/layout/outsidescope.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/layout/outsidescope.scss
@@ -4,6 +4,7 @@
 .forceWhiteLinkColor h1,
 forceWhiteLinkColor h2,
 forceWhiteLinkColor h3,
+forceWhiteLinkColor h4,
 forceWhiteLinkColor p {
   color:#fff !important;
 }
