--- a/wp-content/plugins/nsr-vc-extended/source/sass/nsr-vc-extended.scss
+++ b/wp-content/plugins/nsr-vc-extended/source/sass/nsr-vc-extended.scss
@@ -62,7 +62,8 @@ article ul:not(.nav):not(.slider-items):not(.line-numbers) li:before {
   box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14),0 1px 5px 0 rgba(0,0,0,0.12),0 3px 1px -2px rgba(0,0,0,0.2);
 }
 .collection .date {
-  font-size:0.8rem
+  font-size:0.8rem;
+  margin-top:3px;
 }
 
 .listIcons {
@@ -79,7 +80,9 @@ a.collection-item {
   position:relative;
   top: 3px;
 }
-
+.fulldate.collection-subheader {
+  margin-top:5px;
+}
 
 .collection a.collection-item:not(.active):hover {
   background-color:darken($lighGrey, 2%) !important;
