--- a/wp-content/themes/municipio-nsr/assets/source/sass/layout/outsidescope.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/layout/outsidescope.scss
@@ -9,3 +9,6 @@ forceWhiteLinkColor p {
   color:#fff !important;
 }
 
+.mce-item-table td, .modularity-table td, .table td, article table td {
+  vertical-align: top !important;
+}
