--- a/wp-content/plugins/nsr-vc-extended/source/sass/nsr-vc-extended.scss
+++ b/wp-content/plugins/nsr-vc-extended/source/sass/nsr-vc-extended.scss
@@ -655,7 +655,7 @@ input[type=text]:focus.invalid {
     }
   }
   .position-relative .closeSearch {
-    display:none;
+    display:none !important;
   }
   .sortAs {
     margin-bottom:10px;
