visual composer accordion hack

--- a/wp-content/themes/municipio-nsr/assets/source/sass/app.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/app.scss
@@ -78,6 +78,8 @@
 
         @import 'layout/outsidescope';
 
+
+
     }
 
     .is-child-theme.home {
@@ -86,6 +88,11 @@
         // ***************************************************************
         @import 'layout/_home';
     }
+
+    // ***************************************************************
+    // *** Plugins
+    // ***************************************************************
+    @import 'plugins/visualComposer';
 
 
 
