--- a/wp-content/themes/municipio-nsr/assets/source/sass/plugins/visualComposer.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/plugins/visualComposer.scss
@@ -20,6 +20,7 @@
   left:auto !important;
   right:40px !important;
   font-size: 1.7rem !important;
+  font-weight:400;
 }
 .vc_tta-accordion .vc_tta-panel-body {
   background-color:$palette-primary-grey;
