--- a/wp-content/plugins/nsr-vc-extended/source/sass/nsr-vc-extended.scss
+++ b/wp-content/plugins/nsr-vc-extended/source/sass/nsr-vc-extended.scss
@@ -93,7 +93,9 @@ a.collection-item {
   font-weight: 600 !important;
   color: $defaultGreen !important;
 }
-
+.collapsible-header .materialIconState {
+  font-size:1.5rem !important;
+}
 .card.small {
   height:100% !important;
 }
