sass fix after municipal update

--- a/wp-content/themes/municipio-nsr/assets/source/sass/master.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/master.scss
@@ -89,6 +89,10 @@ html.translated-ltr #site-header {
     background-color:#e6e6e6 !important;
 }
 
+.nav-accessibility li
+{
+    transform: translateZ(1);
+}
 
 
 
