css fix after - up

--- a/wp-content/themes/municipio-nsr/assets/source/sass/master.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/master.scss
@@ -91,7 +91,7 @@ html.translated-ltr #site-header {
 
 .nav-accessibility li
 {
-    transform: translateZ(1);
+    transform: translateZ(1) !important;
 }
 
 
