--- a/wp-content/themes/municipio-nsr/assets/source/sass/layout/outsidescope.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/layout/outsidescope.scss
@@ -16,7 +16,8 @@ forceWhiteLinkColor p {
   transform: translateY(-10px) !important;
   //transform: translateX(80%) !important;
 }
-.nav-accessibility li
+
+.nav-accessibility li, .nav-accessibility a
 {
   transform: none !important;
 }
