nav help - sass

--- a/wp-content/themes/municipio-nsr/assets/source/sass/layout/_content.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/layout/_content.scss
@@ -17,6 +17,7 @@
 
         .nav-help {
             margin-bottom:30px;
+            transform: none !important;
         }
         .nav-help a {
             font-size:1.3rem;
