--- a/wp-content/themes/municipio-nsr/assets/source/sass/layout/outsidescope.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/layout/outsidescope.scss
@@ -16,4 +16,8 @@ forceWhiteLinkColor p {
   transform: translateY(-10px) !important;
   //transform: translateX(80%) !important;
 }
+.nav-help a, .nav-help li {
+  transform: none !important;
+}
+
 
