--- a/wp-content/themes/municipio-nsr/assets/source/sass/layout/outsidescope.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/layout/outsidescope.scss
@@ -17,7 +17,7 @@ forceWhiteLinkColor p {
   //transform: translateX(80%) !important;
 }
 .nav-help a, .nav-help li {
-  transform: none !important;
+  background: #fff !important;
 }
 
 
