--- a/wp-content/themes/municipio-nsr/assets/source/sass/layout/_content.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/layout/_content.scss
@@ -18,18 +18,14 @@
 
         .nav-help {
             margin-bottom:30px;
-            transform: none !important;
         }
         .nav-help a {
             font-size:1.3rem;
             vertical-align: middle;
             display: table-cell;
-            text-decoration: underline;
-            transform: none !important;
+            text-decoration: none !important;
         }
-        .nav-help li {
-            transform: none !important;
-        }
+
         .nav-help i {
             font-size:2.0rem;
             vertical-align: middle;
@@ -38,6 +34,9 @@
         :after {
             content:"";
             background: $palette-primary-white;
+        }
+        #readspeaker-play-button {
+            padding-bottom: 8px;
         }
 
     }
