--- a/wp-content/plugins/nsr-vc-extended/source/sass/nsr-vc-extended.scss
+++ b/wp-content/plugins/nsr-vc-extended/source/sass/nsr-vc-extended.scss
@@ -328,6 +328,10 @@ input[type=text]:focus.invalid {
 
   }
 
+  h4 {
+    line-height:14px;
+  }
+
   td, tr {
     vertical-align: top !important;
   }
