--- a/wp-content/plugins/nsr-vc-extended/source/sass/nsr-vc-extended.scss
+++ b/wp-content/plugins/nsr-vc-extended/source/sass/nsr-vc-extended.scss
@@ -215,6 +215,9 @@ input[type=text]:focus.invalid {
   margin-right: 0rem !important;
   position:relative;
 
+  h4 {
+    line-height:14px !important;
+  }
 
   .input-field input[type=search] {
     background-color: rgba(255, 255, 255, 0.1);
@@ -328,9 +331,7 @@ input[type=text]:focus.invalid {
 
   }
 
-  h4 {
-    line-height:14px;
-  }
+
 
   td, tr {
     vertical-align: top !important;
