--- a/wp-content/plugins/nsr-vc-extended/source/sass/nsr-vc-extended.scss
+++ b/wp-content/plugins/nsr-vc-extended/source/sass/nsr-vc-extended.scss
@@ -217,6 +217,7 @@ input[type=text]:focus.invalid {
 
   h4 {
     line-height:14px !important;
+    max-height: 20px !important;
   }
 
   .input-field input[type=search] {
