--- a/wp-content/themes/municipio-nsr/assets/source/sass/layout/outsidescope.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/layout/outsidescope.scss
@@ -16,3 +16,6 @@ forceWhiteLinkColor p {
   transform: translateY(-10px) !important;
   //transform: translateX(80%) !important;
 }
+#google-translate-element select {
+  display:block !important;
+}
