--- a/wp-content/plugins/nsr-vc-extended/source/sass/nsr-vc-extended.scss
+++ b/wp-content/plugins/nsr-vc-extended/source/sass/nsr-vc-extended.scss
@@ -762,3 +762,20 @@ td, tr {
   vertical-align: top !important;
 
 }
+
+.waitingForConnection {
+  -webkit-animation-name: pulseBorder;
+  -webkit-animation-iteration-count: infinite;
+  -webkit-animation-timing-function: ease;
+  -webkit-animation-direction: alternate;
+  -webkit-animation-duration: 0.5s;
+}
+@-webkit-keyframes pulseBorder {
+  from {
+    border-bottom-color:$darkGrey;
+
+  }
+  to {
+    border-bottom-color:$signalGreen;
+  }
+}
